# IroncladOH

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Apps/DedicatedServer/: main.cpp
Apps/MacGame/: ContentView.swift  EngineHost.h  EngineHost.mm  GameView.swift  Info.plist  IroncladOHApp.swift
Apps/MacGame/Resources/: AppIcon.icns
Apps/iOSGame/: GameView.swift  PostFalliOSApp.swift
Docs/: Architecture.md  BuildInstructions.md  ServerDeployment.md
Engine/AI/: AISystem.cpp  AISystem.hpp
Engine/Animation/: Animation.hpp
Engine/Animation/Core/: AnimationTypes.hpp  HumanoidBones.hpp  Pose.cpp  Pose.hpp  Skeleton.cpp  Skeleton.hpp
Engine/Animation/Debug/: AnimationDebug.cpp  AnimationDebug.hpp
Engine/Animation/IK/: IKSolver.cpp  IKSolver.hpp
Engine/Animation/Import/: ObjectiveCoordImporter.hpp
Engine/Animation/Procedural/: ProceduralAnimator.cpp  ProceduralAnimator.hpp
Engine/Animation/Runtime/: AnimationClip.cpp  AnimationClip.hpp  AnimationController.cpp  AnimationController.hpp  AnimationSampler.cpp  AnimationSampler.hpp  AnimationStateMachine.cpp  AnimationStateMachine.hpp  GaitConfig.hpp
Engine/Animation/Tests/: AnimationTests.cpp  AnimationTests.hpp
Engine/Assets/: AssetID.hpp  MeshAsset.hpp
Engine/Assets/Animation/: soldier_anim_graph.json  soldier_skeleton.json
Engine/Core/: Arena.hpp  Handle.hpp  Log.hpp  Math.hpp  StringID.hpp  Types.hpp
Engine/Input/: InputSystem.hpp
Engine/Network/Protocol/: Messages.hpp
Engine/Network/Transport/: UDPTransport.cpp  UDPTransport.hpp
Engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
Engine/Renderer/: IRenderer.hpp
Engine/Renderer/Metal/: MetalRenderer.hpp  MetalRenderer.mm
Engine/Server/: ServerInstance.cpp  ServerInstance.hpp
Engine/Simulation/: Buildings.hpp  Components.hpp  GameSim.cpp  GameSim.hpp  Terrain.hpp  World.cpp  World.hpp
Scripts/: run_macos_app.sh  run_server.sh  test.sh
Tests/: CMakeLists.txt  NetworkTests.cpp  PhysicsTests.cpp  SimulationTests.cpp
Tools/: gen_icon.py
Tools/AssetCooker/: main.cpp
